generate new docs
