# payment_gateway/cmd/web_server/docs/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "https"
+        "http"
     ],
     "swagger": "2.0",
     "info": {
@@ -15,8 +15,57 @@
     "host": "localhost:8080",
     "basePath": "/api/v1/",
     "paths": {
+        "/payment/": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create Payment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "parameters": [
+                    {
+                        "description": "Payment Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/transport.PaymentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/transport.PaymentResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/payment/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get Payment Status by id",
                 "consumes": [
                     "application/json"
@@ -30,7 +79,7 @@
                 "summary": "Get Payment Status",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Transaction ID",
                         "name": "id",
                         "in": "path",
@@ -55,16 +104,63 @@
         }
     },
     "definitions": {
+        "transport.PaymentRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "card": {
+                    "type": "object",
+                    "properties": {
+                        "cvv": {
+                            "type": "string"
+                        },
+                        "expiry_month": {
+                            "type": "string"
+                        },
+                        "expiry_year": {
+                            "type": "string"
+                        },
+                        "holder_name": {
+                            "type": "string"
+                        },
+                        "number": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "currency": {
+                    "type": "string"
+                }
+            }
+        },
         "transport.PaymentResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
+                "maskedCardNumber": {
+                    "type": "string"
+                },
                 "status": {
+                    "type": "string"
+                },
+                "trackingID": {
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
